INCLUDES=						\
	-DLIBMNOTE_LOCALEDIR=\""$(datadir)/locale"\"	\
	-I$(top_srcdir)					\
	-I$(top_srcdir)/intl

noinst_LIBRARIES = libmnote-canon.a
libmnote_canon_a_SOURCES =				\
	exif-mnote-data-canon.c exif-mnote-data-canon.h \
	mnote-canon-entry.c mnote-canon-entry.h		\
	mnote-canon-tag.c mnote-canon-tag.h
