INCLUDES =					\
	-I$(top_srcdir)/libexif			\
	-I$(top_srcdir)/intl			\
	-I$(top_srcdir)

noinst_LTLIBRARIES = libexif-fuji.la
libexif_fuji_la_SOURCES =			\
	exif-fuji-entry.c exif-fuji-entry.h	\
	exif-fuji-note.c exif-fuji-note.h	\
	exif-fuji-tag.c exif-fuji-tag.h
libexif_fuji_la_LDFLAGS = -avoid-version
