INCLUDES =					\
	-I$(top_srcdir)/libexif			\
	-I$(top_srcdir)/intl			\
	-I$(top_srcdir)

noinst_LTLIBRARIES = libexif-olympus.la
libexif_olympus_la_SOURCES =			\
	exif-olympus-entry.c exif-olympus-entry.h	\
	exif-olympus-note.c exif-olympus-note.h	\
	exif-olympus-tag.c exif-olympus-tag.h
libexif_olympus_la_LDFLAGS = -avoid-version
