INCLUDES =						\
	-DLIBMNOTE_LOCALEDIR=\""$(datadir)/locale"\"	\
	-I$(top_srcdir)					\
	-I$(top_srcdir)/intl

noinst_LIBRARIES = libmnote-olympus.a
libmnote_olympus_a_SOURCES =					\
	mnote-olympus-entry.c mnote-olympus-entry.h		\
	exif-mnote-data-olympus.c exif-mnote-data-olympus.h	\
	mnote-olympus-tag.c mnote-olympus-tag.h
