INCLUDES=						\
	-DLIBMNOTE_LOCALEDIR=\""$(datadir)/locale"\"	\
	-I$(top_srcdir)					\
	-I$(top_srcdir)/intl

noinst_LIBRARIES = libmnote-pentax.a
libmnote_pentax_a_SOURCES =					\
	mnote-pentax-entry.c mnote-pentax-entry.h		\
	exif-mnote-data-pentax.c exif-mnote-data-pentax.h	\
	mnote-pentax-tag.c mnote-pentax-tag.h
