INCLUDES=						\
	-DLIBMNOTE_LOCALEDIR=\""$(datadir)/locale"\"	\
	-I$(top_srcdir)					\
	-I$(top_srcdir)/intl

noinst_LTLIBRARIES = libmnote-pentax.la
libmnote_pentax_la_SOURCES =					\
	mnote-pentax-entry.c mnote-pentax-entry.h		\
	exif-mnote-data-pentax.c exif-mnote-data-pentax.h	\
	mnote-pentax-tag.c mnote-pentax-tag.h
